--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             gap: 30px;
         }
         .logo {
-            width: 500px;
+            width: 50%;
         }
         .description {
             text-align: center;
